# simple_parse

./: Cargo.toml  README.md
examples/: basic.rs  basic_derive.rs  client_server.rs  collections.rs  custom.rs  enum.rs  enum_derive.rs  inspect.rs  no_copy.rs  string.rs  struct.rs  struct_derive.rs  test.rs
examples/bmp/: format.rs  main.rs
examples/old/: enum.rs  struct.rs  test.rs
simple_parse-derive/: Cargo.toml  build.rs
simple_parse-derive/src/: attributes.rs  lib.rs  opt_hints.rs  read.rs  write.rs
src/: error.rs  helpers.rs  lib.rs
src/default_impls/: array.rs  collections.rs  mod.rs  opt_hints.rs  primitive.rs  raw.rs  reader.rs  string.rs  writer.rs
src/default_impls/collections/: mod.rs  read.rs  write.rs
src/default_impls/primitive/: mod.rs  read.rs  write.rs
src/tests/: mod.rs
tests/: collections.rs  derive.rs  primitive.rs
