[package]
name = "simple_parse"
version = "0.6.2"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
edition = "2018"
description = "A declarative converter for Rust type to and from binary"
license = "MIT OR Apache-2.0"

#Extra fields for crates.io
readme = "README.md"
documentation = "https://docs.rs/simple_parse"
repository  = "https://github.com/elast0ny/simple_parse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
print-generated = ["simple_parse_derive/print-generated"]
verbose = ["simple_parse_derive/verbose", "log"]

[dependencies]
simple_parse_derive = { version = "0.6.1", path = "simple_parse-derive" }
static_assertions = "1"
log = {version = "0", optional = true}

[dev-dependencies]
env_logger = "0"
clap ="2"