[package]
name = "simple_parse_derive"
version = "0.4.0"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
edition = "2018"
description = "A macro derive crate that allows conversion between arbitrary bytes into Rust types and vice-versa"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.*"
quote = "1.*"
proc-macro2 = "1.*"
darling = "0.*"