[package]
name = "simple_parse_derive"
version = "0.6.3"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
edition = "2018"
description = "A derive macro that implements the simple_parse traits"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/simple_parse_derive"
repository  = "https://github.com/elast0ny/simple_parse/tree/master/simple_parse-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
print-generated = []
verbose = ["log"]

[dependencies]
syn = "1.*"
quote = "1.*"
proc-macro2 = {version = "1.*", features = ["span-locations"]}
darling = "0.*"
log = {version = "0", optional = true}
static_assertions = "1"